red pen edits up to 3.3.1

--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -53,7 +53,7 @@ Within this thesis we are concerned with those alternate realities that through 
 	\textit{``Sight plays such a prominent part in the mental life that the field of vision is sometimes considered almost synonymous with the field of attention.''}~\cite{Lucas1951}
 \end{quote}
 
-The 1990s saw a surge of interest around \textit{virtual reality}, promising to immerse users via head mounted displays into 3D virtual environments. However with hardware and software simply not advanced enough to meet the news and media generated hype, the virtual reality bubble burst and was largely ignored as a consumer platform for gaming and media consumption.
+The 1990s saw a surge of interest around \textit{virtual reality}, promising to immerse users via a head mounted display (HMD) into 3D virtual environments. However with hardware and software simply not advanced enough to meet the news and media generated hype, the virtual reality bubble burst and was largely ignored as a consumer platform for gaming and media consumption.
 
 The advent and mass adoption of the smartphone beginning in the early 2000s, with its combination of location sensing (GPS) and orientation sensing (accelerometer and gyroscope) capabilities in a portable package with a screen, camera and Internet access, led to a surge of \textit{augmented reality} applications, which overlaid virtual objects and data upon the view of the real world captured by the phone's rear-facing camera.
 
@@ -63,7 +63,7 @@ One such project, led by Joshua Lifton at MIT's Media Lab, introduced \textit{cr
 
 The vacancy problem remains an important consideration, as we move rapidly into a world where the ubiquity of technology, wireless communications and the explosive popularity of social networking heralds the coming of an era in which maintaining a virtual presence (whether 3D or on Facebook) while continuing to function in the real world becomes not just desirable, but the norm, creating instances of \textit{polysocial reality}~\cite{Applin2012} (see also the opening quote to this chapter) wherever we go.
 
-It is here in the story of alternate realities that this thesis enters. Taking one of the core concepts of cross reality, that of tandem real and a virtual environments both complete unto themselves, and extending it to allow the user to engage \textit{visually} with both environments wherever within them they are, gives rise to parallel reality. With the recent resurgence of interest in head mounted display based virtual reality, thanks largely to the introduction by Oculus\footnote{\url{https://www.oculus.com/}} of their Rift developer kits that leverage advances in display technology to overcome the shortfalls of the 90s virtual reality fad, and the introduction of novel smartphone based indoor positioning technology from IndoorAtlas\footnote{\url{https://www.indooratlas.com/}}, the \textit{Mirrorshades} parallel reality platform was developed and evaluated as a first foray into this exciting new take on our realities. Where cross reality permitted users an indirect insight into the other environment by means of sensors and actuators, parallel reality grants them the ability to switch between direct visual engagement with each environment - to at one moment view their real surroundings and the next the equivalent vantage in the immersive parallel virtual environment.
+It is here in the story of alternate realities that this thesis enters. Taking one of the core concepts of cross reality, that of tandem real and a virtual environments both complete unto themselves, and extending it to allow the user to engage \textit{visually} with both environments wherever within them they are, gives rise to parallel reality. With the recent resurgence of interest in HMD based virtual reality, thanks largely to the introduction by Oculus\footnote{\url{https://www.oculus.com/}} of their Rift developer kits that leverage advances in display technology to overcome the shortfalls of the 90s virtual reality fad, and the introduction of novel smartphone based indoor positioning technology from IndoorAtlas\footnote{\url{https://www.indooratlas.com/}}, the \textit{Mirrorshades} parallel reality platform was developed and evaluated as a first foray into this exciting new take on our realities. Where cross reality permitted users an indirect insight into the other environment by means of sensors and actuators, parallel reality grants them the ability to switch between direct visual engagement with each environment - to at one moment view their real surroundings and the next the equivalent vantage in the immersive parallel virtual environment.
 
 %=========================================================================================================
 
