--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -174,7 +174,7 @@ Telepresence & The ability for a user to experience a sense of presence at a rea
 
 Virtual Reality (VR) & The polar opposite of reality, an environment that consists solely of virtual objects, with computer-based quantitative information associated with and between all of them, creating a completely synthetic world entirely discrete and separate from the real world; a new world that exists solely within the data structures of a computer~\cite{Milgram1999, Want2009}. One of the fundamental primary environments, occupying an endpoint of the reality-virtuality continuum. \\
 
- & While traditional definitions of virtual reality require the environment to be completely immersive, such that when involved with the environment the user is completely unaware of the real environment that surrounds them (such as by using Head Mounted Displays and body tracking techniques to remove logical anchors to the real world~\cite{Druck2006}) one can also adopt less drastic criteria and classify the virtual environments presented by video games viewed via 2D monitors as rudimentary implementations of virtual reality; they are after all completely modelled environments that exist entirely separate to the real world. \\
+ & While traditional definitions of virtual reality require the environment to be completely immersive, such that when involved with the environment the user is completely unaware of the real environment that surrounds them (such as by using HMDs and body tracking techniques to remove logical anchors to the real world~\cite{Druck2006}) one can also adopt less drastic criteria and classify the virtual environments presented by video games viewed via 2D monitors as rudimentary implementations of virtual reality; they are after all completely modelled environments that exist entirely separate to the real world. \\
 		
 \midrule
 
@@ -192,7 +192,7 @@ Mixed Reality (MR) & The broad range of environments that arise from the merging
 		
 %=========================================================================================================
 
-Augmented Reality (AR) & A mixed reality environment that features a real environment as its primary environment onto which virtual objects are added or overlain. A common approach for achieving this addition/overlay is superimposing virtual objects over a direct or indirect view of the real environment using head mounted displays \&/or cameras~\cite{Krevelen2010} and more recently making use of smartphones with their built in cameras and orientation sensing capabilities. \\
+Augmented Reality (AR) & A mixed reality environment that features a real environment as its primary environment onto which virtual objects are added or overlain. A common approach for achieving this addition/overlay is superimposing virtual objects over a direct or indirect view of the real environment using HMDs \&/or cameras~\cite{Krevelen2010} and more recently making use of smartphones with their built in cameras and orientation sensing capabilities. \\
 
 	%A commercial example of \textit{augmented reality} is the Layar browser for mobile phones, which overlays various forms of data onto the view captured by a phone's camera after determining its location and orientation using GPS, accelerometer and magnetometer readings~\cite{eishita:layar}
 
@@ -423,7 +423,7 @@ However one treats virtual space, a parallel reality system would be unrewarding
 
 One might consider the `Second Earth' concept to be the ultimate realisation of this scenario of spatially equivalent real and virtual environments. The combination of virtual world technology (as in Second Life) with `mirror world' technology (as in Google Earth), Second Earth theorises a virtual simulation/reconstruction of the entire physical world, such that for any location in the real world there is a corresponding location in the virtual world~\cite{Roush2007}. The parallel reality platforms developed in this thesis focus on individual locations, however it does not take a great leap of the imagination to comprehend the worth of such a system scaled to a larger, even global, size.
 
-Although the use cases for parallel reality systems that feature completely unrelated real and virtual environments (including where the virtual environment is entirely fictitious) may seem limited in terms of possible benefits to understanding or knowledge gain when comparing and contrasting the environments, an educated approach to implementing transitions between these environments, that takes similar considerations as the platforms developed in this thesis, does conceivably have purpose. In the opening quote to this chapter, taken from Neal Stephenson's cyberpunk novel \textit{Snow Crash}, the protagonist enquires about the location of another character, both in the real world and in the `Metaverse' (analogous to a virtual world akin to Second Life, accessed via a head mounted display, comprising an entirely synthetic virtual world whose locations have no counterparts in the real world). Her response is that \textit{``In  the Metaverse, I'm on a plusbound monorail train. Just passed by Port 35.''} whilst in reality she is at a \textit{``Public terminal across the street from a Reverend Wayne's"}.
+Although the use cases for parallel reality systems that feature completely unrelated real and virtual environments (including where the virtual environment is entirely fictitious) may seem limited in terms of possible benefits to understanding or knowledge gain when comparing and contrasting the environments, an educated approach to implementing transitions between these environments, that takes similar considerations as the platforms developed in this thesis, does conceivably have purpose. In the opening quote to this chapter, taken from Neal Stephenson's cyberpunk novel \textit{Snow Crash}, the protagonist enquires about the location of another character, both in the real world and in the `Metaverse' (analogous to a virtual world akin to Second Life, accessed via a HMD, comprising an entirely synthetic virtual world whose locations have no counterparts in the real world). Her response is that \textit{``In  the Metaverse, I'm on a plusbound monorail train. Just passed by Port 35.''} whilst in reality she is at a \textit{``Public terminal across the street from a Reverend Wayne's"}.
 
 There is no spatial equivalence in this scenario between the real environment and the virtual environment - they are not the same `place', however the protagonist still wishes to be able to experience both by transitioning between them, paying attention to one while travelling through the other. While this situation is currently science fiction, recent developments in mobile VR platforms such as Samsumg Gear VR\footnote{\url{http://www.samsung.com/global/microsite/gearvr/}} hint that we are not so far away from a time in which members of the general public will wish to multiplex their real environment with a virtual one in this fashion while in public, in the same way that people commonly engage in computer-mediated communication (CMC) via their smartphones at the same time as walking through real environments and conversing with the people in them, creating instances of polysocial reality. If a parallel reality system were to allow interaction between its user and other virtual environment users who are not part of the parallel reality scenario, it is conceivable that polysocial instances would arise, with PR users socially engaging both with people in their immediate real environment and with people in their immediate virtual environment, even where the latter are not present in the RW environment. This situation would present \textit{``\ldots\ instances of synchronous polysocial reality, multiple presence \ldots\ being activated in different environments.''}\footnote{Personal correspondence with Sally Applin, polysocial reality author.}
 
@@ -567,7 +567,7 @@ Transitions can be implemented in multiple different manners and it is expected 
 \subsection{Parallel Reality and the Combined Milgram/Waterworth Model}
 Visualised using the combined Milgram/Waterworth model, the transitions of a parallel reality system are an oscillation along the locus of attention axis between two different positions. Figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition} shows an example where a user performs a smooth transition between perceiving stimuli from a fully real environment and a fully virtual environment.
 
-Heightened cognitive load required to comprehend a transition is represented by a temporary movement upon the focus axis from presence toward absence (a break in presence). With the ability of a wide field of view (FOV), stereoscopic 3D, head-tracked head mounted display (HMD) (such as that used by the Mirrorshades platform developed in this thesis) to produce immersive virtual reality visual stimuli that require fairly limited cognitive processing and our inherent ability to engage with our real surroundings without significant cognitive load, focus is represented as being high (toward the presence extreme) when attending to stimuli from either the purely real or purely virtual environment.
+Heightened cognitive load required to comprehend a transition is represented by a temporary movement upon the focus axis from presence toward absence (a break in presence). With the ability of a wide field of view (FOV), stereoscopic 3D, head-tracked HMD (such as that used by the Mirrorshades platform developed in this thesis) to produce immersive virtual reality visual stimuli that require fairly limited cognitive processing and our inherent ability to engage with our real surroundings without significant cognitive load, focus is represented as being high (toward the presence extreme) when attending to stimuli from either the purely real or purely virtual environment.
 
 Sensus is expected to be largely task dependent, however when performing a task that involves actively engaging with the visual stimuli from either/both of the real and virtual environments it is expected to be high (toward the conscious extreme). Upon triggering a transition, sensus is expected to increase, as the user centres their attention upon relating the visual stimuli from the new environment to those they were just perceiving from the other environment
 
